# AnalisadorBackend

./: Cargo.toml  mock_sensors.py
db/: readings.sql
src/: main.rs
src/server/: db.rs
src/telemetry/: analysis.rs  parsing.rs
